Refactor to resources & Put swagger schemas in requests and resources
