# src/Name/Presentation/Requests/UpdateCustomerRequest.php
@@ -7,6 +7,20 @@ use Illuminate\Validation\Rule;
 use Src\Name\Infrustructure\Models\Customer;
 use Src\Name\Presentation\Requests\Rules\PhoneNumberRule;
 
+/**
+ * @OA\Schema(
+ *     schema="UpdateCustomerRequest",
+ *     title="Update Customer Request",
+ *     description="Update customer request body",
+ *     @OA\Property(property="first_name",  type="string", example="Alireza"),
+ *     @OA\Property(property="last_name", type="string", example="Porthos"),
+ *     @OA\Property(property="date_of_birth", type="string", format="date-time", example="1999-11-9"),
+ *     @OA\Property(property="phone_number", type="string", example="09910451706"),
+ *     @OA\Property(property="bank_account_number", type="string",  minLength=9, maxLength=18, example=1234567890),
+ *     @OA\Property(property="email", type="string", format="email", example="alireza@test.com")
+ * )
+ */
+
 class UpdateCustomerRequest extends FormRequest
 {
     /**
